Plugin: for testing open JDK internal classes (JDK 21)
Following the JDK 21 update, some JDK internal classes need to be opened
up to use the Gradle ProjectBuild test fixtures APIs.